--- a/index.html
+++ b/index.html
@@ -121,57 +121,118 @@
                         </li> -->
                     </ul>
                 </li>
-                <!-- <li class="active"> -->
+
                 <li>
-                    <a href="#cauhinhmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Cấu
-                        hình</a>
-                    <ul class="nav nav-tabs collapse list-unstyled" id="cauhinhmenu">
+                    <a href="#giaodichmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Tài
+                        chính</a>
+                    <ul class="nav nav-tabs collapse list-unstyled" id="giaodichmenu">
                         <li>
-                            <a href="#hotelapart" data-toggle="collapse" aria-expanded="false"
-                                class="dropdown-toggle">S07.0- Hotel/Apartment</a>
-                            <ul class="nav nav-tabs collapse list-unstyled" id="hotelapart">
+                            <a href="#giaodich" data-toggle="collapse" aria-expanded="false"
+                                class="dropdown-toggle">Giao dịch</a>
+                            <ul class="nav nav-tabs collapse list-unstyled" id="giaodich">
                                 <li>
-                                    <a data-toggle="tab" class="pl5" href="#hahome">Home</a>
+                                    <a href="#thu" data-toggle="collapse" aria-expanded="false" class="menucon">Thu</a>
+                                    <ul class="nav nav-tabs collapse list-unstyled" id="thu">
+
+                                        <li>
+                                            <a data-toggle="tab" class="pl5" href="#thuhome">Home</a>
+                                        </li>
+                                        <li>
+                                            <a data-toggle="tab" class="pl5" href="#thudiagram">Activity Diagram</a>
+                                        </li>
+                                        <li>
+                                            <a data-toggle="tab" class="pl5" href="#thumockup">Mockup</a>
+                                        </li>
+                                    </ul>
+
+                                    <a href="#chi" data-toggle="collapse" aria-expanded="false" class="menucon">Chi</a>
+                                    <ul class="nav nav-tabs collapse list-unstyled" id="chi">
+
+                                        <li>
+                                            <a data-toggle="tab" class="pl5" href="#chihome">Home</a>
+                                        </li>
+                                        <li>
+                                            <a data-toggle="tab" class="pl5" href="#chidiagram">Activity Diagram</a>
+                                        </li>
+                                        <li>
+                                            <a data-toggle="tab" class="pl5" href="#chimockup">Mockup</a>
+                                        </li>
+                                    </ul>
                                 </li>
-                                <li>
-                                    <a data-toggle="tab" class="pl5" href="#hadiagram">Activity Diagram</a>
-                                </li>
-                                <li>
-                                    <a data-toggle="tab" class="pl5" href="#hamockup">Mockup</a>
-                                </li>
+
+
+
 
                             </ul>
-                        </li>
-                        <li>
-                            <a data-toggle="tab" href="#">S07.1- Phòng</a>
-                        </li>
-                        <li>
-                            <a data-toggle="tab" href="#">S07.2- Tiền Tệ</a>
-                        </li>
-                        <li>
-                            <a data-toggle="tab" href="#">S07.3- Quyền</a>
-                        </li>
-                        <li>
-                            <a data-toggle="tab" href="#">S07.4- Nhân viên</a>
-                        </li>
-                        <li>
-                            <a data-toggle="tab" href="#">S07.5- Promotion</a>
-                        </li>
-                        <li>
-                            <a data-toggle="tab" href="#">S07.6- Tax</a>
 
                         </li>
                         <li>
-                            <a data-toggle="tab" href="#">S07.7- CRM</a>
+                            <a href="#">Night Audit</a>
                         </li>
-                        <li>
-                            <a data-toggle="tab" href="#">S07.8- OTA</a>
-                        </li>
+
+
                     </ul>
+
                 </li>
-                <li>
-                    <a href="#">Contact</a>
-                </li>
+
+                <!-- <li>
+                            <a href="#">Mockup 3</a>
+                        </li> -->
+            </ul>
+            </li>
+            <!-- <li class="active"> -->
+            <li>
+                <a href="#cauhinhmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Cấu
+                    hình</a>
+                <ul class="nav nav-tabs collapse list-unstyled" id="cauhinhmenu">
+                    <li>
+                        <a href="#hotelapart" data-toggle="collapse" aria-expanded="false"
+                            class="dropdown-toggle">S07.0- Hotel/Apartment</a>
+                        <ul class="nav nav-tabs collapse list-unstyled" id="hotelapart">
+                            <li>
+                                <a data-toggle="tab" class="pl5" href="#hahome">Home</a>
+                            </li>
+                            <li>
+                                <a data-toggle="tab" class="pl5" href="#hadiagram">Activity Diagram</a>
+                            </li>
+                            <li>
+                                <a data-toggle="tab" class="pl5" href="#hamockup">Mockup</a>
+                            </li>
+
+                        </ul>
+                    </li>
+                    <li>
+                        <a data-toggle="tab" href="#">S07.1- Phòng</a>
+                    </li>
+                    <li>
+                        <a data-toggle="tab" href="#">S07.2- Tiền Tệ</a>
+                    </li>
+                    <li>
+                        <a data-toggle="tab" href="#">S07.3- Quyền</a>
+                    </li>
+                    <li>
+                        <a data-toggle="tab" href="#">S07.4- Nhân viên</a>
+                    </li>
+                    <li>
+                        <a data-toggle="tab" href="#">S07.5- Promotion</a>
+                    </li>
+                    <li>
+                        <a data-toggle="tab" href="#">S07.6- Tax</a>
+
+                    </li>
+                    <li>
+                        <a data-toggle="tab" href="#">S07.7- CRM</a>
+                    </li>
+                    <li>
+                        <a data-toggle="tab" href="#">S07.8- OTA</a>
+                    </li>
+                </ul>
+            </li>
+
+
+            <li>
+                <a href="#">Contact</a>
+            </li>
             </ul>
         </nav>
 
@@ -325,6 +386,209 @@
                     </p>
                 </div>
                 <div id="hamockup" class="tab-pane fade in">
+                    <h3>Mockup</h3>
+                    <p><img src="./Images/mockup/s07.png" class="img-fluid" alt="Responsive image"></p>
+                    <table class="table">
+                        <caption>Mô tả màn hình cấu hình Hotel/Apartment</caption>
+                        <thead>
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">Component</th>
+                                <th scope="col">Comp. Type</th>
+                                <th scope="col">Mandatory</th>
+                                <th scope="col">Default Value</th>
+                                <th scope="col">Description</th>
+                                <th scope="col">PD
+                                    DB.Table.Column
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">1</th>
+                                <td>Cấu hình Hotel/Apartment</td>
+                                <td>Breadscrumbs</td>
+                                <td>YES</td>
+                                <td>N/A</td>
+                                <td>Truy vấn, sửa đổi, xoá thông tin các Hotel/Apartment đã có và thêm mới</td>
+                                <td>
+                                    <ul>
+                                        <li>Database: N/A</li>
+                                        <li>Table: N/A</li>
+                                        <li>Column: N/A</li>
+                                    </ul>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">2</th>
+                                <td>Danh sách các Hotel/Apartment</td>
+                                <td>Menu Tree</td>
+                                <td>YES</td>
+                                <td>N/A</td>
+                                <td>Hiển thị thông tin các Hotel/Apartment đã cài đặt. Khi bấm chọn sẽ fill màu
+                                    <p class="mauxanh">(#80FFFF)</p>
+                                </td>
+                                <td>
+                                    <ul>
+                                        <li>Database: N/A</li>
+                                        <li>Table: N/A</li>
+                                        <li>Column: N/A</li>
+                                    </ul>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">3</th>
+                                <td>Mã</td>
+                                <td>Label</td>
+                                <td>YES</td>
+                                <td>N/A</td>
+                                <td>Dạng int, tự phát sinh, read only</td>
+                                <td>
+                                    <ul>
+                                        <li>Database: N/A</li>
+                                        <li>Table: N/A</li>
+                                        <li>Column: N/A</li>
+                                    </ul>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">4</th>
+                                <td>Tên</td>
+                                <td>Text field</td>
+                                <td>YES</td>
+                                <td>N/A</td>
+                                <td>
+                                    Nhập/Hiển thị tên dạng String
+                                </td>
+                                <td>
+                                    <ul>
+                                        <li>Database: N/A</li>
+                                        <li>Table: N/A</li>
+                                        <li>Column: N/A</li>
+                                    </ul>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">5</th>
+                                <td>Web</td>
+                                <td>Text field</td>
+                                <td>YES</td>
+                                <td>N/A</td>
+                                <td>Nhập/Hiển thị địa chỉ website dạng String</td>
+                                <td>
+                                    <ul>
+                                        <li>Database: N/A</li>
+                                        <li>Table: N/A</li>
+                                        <li>Column: N/A</li>
+                                    </ul>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">6</th>
+                                <td>Email</td>
+                                <td>Text field</td>
+                                <td>YES</td>
+                                <td>N/A</td>
+                                <td>Nhập/Hiển thị địa chỉ website dạng string, có kiểm tra định dạng email</td>
+                                <td>
+                                    <ul>
+                                        <li>Database: N/A</li>
+                                        <li>Table: N/A</li>
+                                        <li>Column: N/A</li>
+                                    </ul>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">7</th>
+                                <td>Phone</td>
+                                <td>Text field</td>
+                                <td>YES</td>
+                                <td>N/A</td>
+                                <td>Nhập/Hiển thị số Phone dạng string, có kiểm tra định dạng Phone</td>
+                                <td>
+                                    <ul>
+                                        <li>Database: N/A</li>
+                                        <li>Table: N/A</li>
+                                        <li>Column: N/A</li>
+                                    </ul>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">8</th>
+                                <td>Fax</td>
+                                <td>Text field</td>
+                                <td>YES</td>
+                                <td>N/A</td>
+                                <td>Nhập/Hiển thị số FAX dạng string</td>
+                                <td>
+                                    <ul>
+                                        <li>Database: N/A</li>
+                                        <li>Table: N/A</li>
+                                        <li>Column: N/A</li>
+                                    </ul>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">9</th>
+                                <td>Mã số thuế</td>
+                                <td>Text field</td>
+                                <td>YES</td>
+                                <td>N/A</td>
+                                <td>Nhập/Hiển thị mã số thuế dạng string</td>
+                                <td>
+                                    <ul>
+                                        <li>Database: N/A</li>
+                                        <li>Table: N/A</li>
+                                        <li>Column: N/A</li>
+                                    </ul>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">10</th>
+                                <td>Địa chỉ</td>
+                                <td>Text field</td>
+                                <td>YES</td>
+                                <td>N/A</td>
+                                <td>Nhập/Hiển thị địa chỉ dạng string</td>
+                                <td>
+                                    <ul>
+                                        <li>Database: N/A</li>
+                                        <li>Table: N/A</li>
+                                        <li>Column: N/A</li>
+                                    </ul>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">11</th>
+                                <td>Loại hình</td>
+                                <td>Dropdownlist</td>
+                                <td>YES</td>
+                                <td>Hotel, Apartment</td>
+                                <td>Chọn loại hình với 2 giá tri mặc định là Hotel, Apartment</td>
+                                <td>
+                                    <ul>
+                                        <li>Database: N/A</li>
+                                        <li>Table: N/A</li>
+                                        <li>Column: N/A</li>
+                                    </ul>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+                <!-- Noi dung trang THU -->
+                <div id="thuhome" class="tab-pane fade in">
+                    <h3>HOME</h3>
+                    <p>Truy vấn thông tin giao dịch thu nhập của hotel/apartment</p>
+                </div>
+                <div id="thudiagram" class="tab-pane fade in">
+                    <h3>Activity Diagram</h3>
+                    <p>
+                    <p><img src="./Images/diagram/Hotel:Apartment.png" class="img-fluid" alt="Responsive image"></p>.
+                    </p>
+                </div>
+                <div id="thumockup" class="tab-pane fade in">
                     <h3>Mockup</h3>
                     <p><img src="./Images/mockup/s07.png" class="img-fluid" alt="Responsive image"></p>
                     <table class="table">
