--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                         </li> -->
             </ul>
             </li>
-            <!-- <li class="active"> -->
+
             <li>
                 <a href="#cauhinhmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Cấu
                     hình</a>
@@ -257,7 +257,7 @@
 
             <div class="tab-content">
                 <!-- Noi dung trang Login -->
-                <div id="loginhome" class="tab-pane fade in active">
+                <div id="loginhome" class="tab-pane fade in">
                     <h3>HOME</h3>
                     <p>Màn hình đăng nhập để user điền thông tin đăng nhập (Username và Password) để truy cập vào hệ
                         thống.</p>
